[package]
name = "rust-dqn-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tensorboard-rs = "0.5.9"
tch = "0.20.0" # Check for the latest version
rand = {version = "0.9.2", features = ["thread_rng"]}
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"